    -added new rules to handle common contextual misspellings and
     redundant phrases as well as common grammatical mistakes. Now
     the number of rules for English exceeds 1000
    -made it possible to use synthesizer to both add a determiner and
     make different replacement operations when creating suggestions;
     simply add \\+INDT or \\+DT as special keywords to the regex that
     creates the POS tag in the match element      

-French:
    -updated POS tag dictionary and Hunspell dictionary to Dicollecte-5.0.2

-German:
    -fixed several false alarms
    
-Polish:
    -updated POS tag dictionary to PoliMorfologik 2.1
    -cleaned up spelling rules and hyphenation rules, added some frequent
     misspellings to generate proper suggestions
    -added simple compounding support for compound words containing prefixes
     such as "anty" or "mini", and adjectives with numerals such as "trzynasto"
    -removed annoying false alarms
    -added some new rules
    -changed word tokenization so that the hyphen at the end of a
     word is no longer its part; multi-word expressions with a hyphen
     are also split into their component parts to avoid many false
     alarms in spell-checking
     
-Portuguese:
    -added several rules
    -added dozens of compounds: it now has 3400+ compound words    
    
-Russian:
    -added a few rules
    
-Slovenian:
    -fixed sentence detection so that sentences that begin with a lowercase
     character can now be detected
    
-added common punctuation and mathematical characters (=#*∗×·+÷) to the 
 set of tokenizing characters in most languages

-spell checking: Immunized tokens are now ignored and
   don't cause a spelling error anymore; one can also add particular
   contextual expressions to ignored words by using a new action
   of the disambiguator: "ignore_spelling" 

-stand-alone GUI:
    -The "More..." dialog now contains a link to community.languagetool.org
     with details about the matching rule
    