@@ -360,3 +360,5 @@ guiActivateRuleMoreCategories = More
 clearText = Clear Text
 
 ruleDetailsLink = Rule details on community.languagetool.org
+
+addSpaceBetweenSentences = Add a space between sentences
