@@ -19,13 +19,15 @@ LanguageTool Change Log
     -made it possible to use synthesizer to both add a determiner and
      make different replacement operations when creating suggestions;
      simply add \\+INDT or \\+DT as special keywords to the regex that
-     creates the POS tag in the match element      
+     creates the POS tag in the match element
+    -a new rule checks for a space character between sentences
 
 -French:
     -updated POS tag dictionary and Hunspell dictionary to Dicollecte-5.0.2
 
 -German:
     -fixed several false alarms
+    -a new rule checks for a space character between sentences
     
 -Polish:
     -updated POS tag dictionary to PoliMorfologik 2.1
